[package]
name = "bluesky-liked-image-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = "0.16.0"
atrium-xrpc-client = "0.2.0"
chrono = { version = "0.4.34", features = ["alloc"] }
futures = "0.3.30"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_toml = "0.0.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.10"
url = "2.5.0"
